--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,35,36}-django{110,111}
+envlist = py{27,35,36}-django{110,111,21,22}
 
 [testenv]
 changedir = tests
@@ -11,5 +11,7 @@ deps =
     py{35,36}: django-filter==2.1.0
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
+    django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<3
 setenv =
     DJANGO_DEBUG = 1
